  are accepted and taken to mean "true". This is to stop users from setting
  e.g. `CCACHE_DISABLE=0` and then expect the cache to be used.

- Improved support for `run_second_cpp = false`: If combined with passing
  `-fdirectives-only` (GCC) or `frewrite-includes` (Clang) to the compiler,
  diagnostics warnings and similar will be correct.


Bug fixes
~~~~~~~~~

- File size and number counters are now updated correctly when files are
  overwritten in the cache, e.g. when using `CCACHE_RECACHE`.

- `run_second_cpp` is now forced for nvcc.

- Fixed how the nvcc options `-optf` and `-odir` are handled.


ccache 3.3.6
------------
Release date: 2018-01-28

New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Improved instructions on how to get cache hits between different working
  directories.


Bug fixes
~~~~~~~~~

- Fixed regression in ccache 3.3.5 related to the `UNCACHED_ERR_FD` feature.


ccache 3.3.5
------------
Release date: 2018-01-13


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Documented how automatic cache cleanup works.


Bug fixes
~~~~~~~~~

- Fixed a regression where the original order of debug options could be lost.
  This reverts the ``Improved parsing of `-g*` options'' feature in ccache 3.3.

- Multiple `-fdebug-prefix-map` options should now be handled correctly.

- Fixed matching of directories in the `ignore_headers_in_manifest`
  configuration option.

- Fixed detection of missing argument to `-opt`/`--options-file`.

- ccache now bails out when building a precompiled header if any of the
  corresponding header files have an updated timestamp. This fixes complaints
  from clang.

- Fixed a bug related to erroneously storing a dependency file with absolute
  paths in the cache on a preprocessed hit.

- `ccache -c/--cleanup` now works like documented: it just recalculates size
  counters and trims the cache to not exceed the max size and file number