@@ -127,8 +127,9 @@ EOF
     TEST "Calculation of dependency file names"
 
     mkdir test.dir
-    for ext in .obj "" . .foo.bar; do
+    for ext in .o .obj "" . .foo.bar; do
         dep_file=test.dir/`echo test$ext | sed 's/\.[^.]*\$//'`.d
+
         $CCACHE_COMPILE -MD -c test.c -o test.dir/test$ext
         rm -f $dep_file
         $CCACHE_COMPILE -MD -c test.c -o test.dir/test$ext
@@ -138,8 +139,19 @@ EOF
         if ! grep "test$ext:" $dep_file >/dev/null 2>&1; then
             test_failed "$dep_file does not contain test$ext"
         fi
+
+        dep_target=foo.bar
+        $CCACHE_COMPILE -MD -MQ $dep_target -c test.c -o test.dir/test$ext
+        rm -f $dep_target
+        $CCACHE_COMPILE -MD -MQ $dep_target -c test.c -o test.dir/test$ext
+        if [ ! -f $dep_file ]; then
+            test_failed "$dep_file missing"
+        fi
+        if ! grep $dep_target $dep_file >/dev/null 2>&1; then
+            test_failed "$dep_file does not contain $dep_target"
+        fi
     done
-    expect_stat 'files in cache' 12
+    expect_stat 'files in cache' 18
 
     # -------------------------------------------------------------------------
     TEST "-MMD for different source files"
