@@ -31,6 +31,10 @@ New features and improvements
   `-fdirectives-only` (GCC) or `frewrite-includes` (Clang) to the compiler,
   diagnostics warnings and similar will be correct.
 
+- An implicit `-MQ` is now passed to the preprocessor only if the object file
+  extension is non-standard. This should make it easier to use EDG-based
+  compilers (e.g. GHS) which don't understand `-MQ`.
+
 
 Bug fixes
 ~~~~~~~~~
